[package]
name = "sc-consensus-beefy"
version = "4.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/substrate"
description = "BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[dependencies]
array-bytes = "4.1"
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
fnv = "1.0.6"
futures = "0.3"
log = "0.4"
parking_lot = "0.12.1"
thiserror = "1.0"
wasm-timer = "0.2.5"
prometheus = { package = "substrate-prometheus-endpoint", version = "0.12.0", path = "../../../utils/prometheus" }
sc-client-api = { version = "19.0.0", path = "../../api" }
sc-consensus = { version = "0.24.0", path = "../../consensus/common" }
sc-keystore = { version = "16.0.0", path = "../../keystore" }
sc-network = { version = "0.25.0", path = "../../network" }
sc-network-common = { version = "0.24.0", path = "../../network/common" }
sc-network-gossip = { version = "0.25.0", path = "../../network-gossip" }
sc-utils = { version = "6.0.0", path = "../../utils" }
sp-api = { version = "17.0.0", path = "../../../primitives/api" }
sp-application-crypto = { version = "20.0.0", path = "../../../primitives/application-crypto" }
sp-arithmetic = { version = "14.0.0", path = "../../../primitives/arithmetic" }
sp-blockchain = { version = "19.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.23.0", path = "../../../primitives/consensus/common" }
sp-consensus-beefy = { version = "4.0.0", path = "../../../primitives/consensus/beefy" }
sp-core = { version = "18.0.0", path = "../../../primitives/core" }
sp-keystore = { version = "0.24.0", path = "../../../primitives/keystore" }
sp-mmr-primitives = { version = "17.0.0", path = "../../../primitives/merkle-mountain-range" }
sp-runtime = { version = "21.0.0", path = "../../../primitives/runtime" }

[dev-dependencies]
serde = "1.0.136"
tempfile = "3.1.0"
tokio = "1.22.0"
sc-block-builder = { version = "0.24.0", path = "../../block-builder" }
sc-network-test = { version = "0.8.0", path = "../../network/test" }
sp-consensus-grandpa = { version = "4.0.0", path = "../../../primitives/consensus/grandpa" }
sp-keyring = { version = "21.0.0", path = "../../../primitives/keyring" }
sp-tracing = { version = "9.0.0", path = "../../../primitives/tracing" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
